--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -188,18 +188,11 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
         $(youtube-dl -g https://www.livenewsnow.com/canadian-news/cbc-news.html)
         EOL
-     - name : Upload artifact
-       uses: actions/upload-artifact@master
-       with:
-        name: Push pt.1
-        path: .
-     - name: Push pt.2
+     - name: git add
        run: |
-        git init
-        git config --local user.name "actions"
-        git config --local user.email "action@github.com" 
-        git checkout -b live
-        git add .
-        git commit -m "Updates lives specified in extractor.yml"
-        git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
-        git push -f -u origin live
+        git add -A
+        ls -la
+     - name: commit & push
+       run: |
+        git commit -m "links are updated"
+        git push
