--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,17 +1,28 @@
-name: Generate livestreams
+name: Get StreamLink Live m3u8
 on:
   schedule:
-    - cron: "45 */2 * * *"
+    - cron: '0 0/2 * * *'
+
+  pull_request:
+    branches:
+      - main
+
   workflow_dispatch:
+
 jobs:
-  workflow_dispatch:
+  build:
     runs-on: ubuntu-latest
     steps:
-     - name: Install youtube-dl
+    - uses: actions/checkout@v2
+    - name: config
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
+    - name: Install youtube-dl
        run: |
         sudo curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
-     - name: RTVE 24h
+    - name: RTVE 24h
        run: |
         mkdir "ES"
         cd ES
@@ -187,12 +198,12 @@ jobs:
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
         $(youtube-dl -g https://www.livenewsnow.com/canadian-news/cbc-news.html)
-        EOL
-     - name: git add
-       run: |
+        EOL           
+    - name: git add
+      run: |
         git add -A
         ls -la
-     - name: commit & push
-       run: |
-        git commit -m "links are updated"
+    - name: commit & push
+      run: |
+        git commit -m "links atualizados"
         git push
