--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,41 +1,13 @@
-name: Get StreamLink Live m3u8
+name: Generate livestreams
 on:
   schedule:
-    - cron: '0 0/2 * * *'
-
-  pull_request:
-    branches:
-      - main
-
+    - cron: "45 */2 * * *"
   workflow_dispatch:
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  workflow_dispatch:
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v2
-    - name: config
-      run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
-    - name: Install youtube-dl
-      run: |
+     - name: Install youtube-dl
+       run: |
         sudo curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
-         - name: RTVE 24h
-        run: |
-        touch ./24h.m3u8
-        sudo cat >./24h.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://youtube.com/rtvenoticias/live)
-        EOL
-        - name: git add
-        run: |
-        git add -A
-        ls -la
-        - name: commit & push
-         run: |
-        git commit -m "links atualizados"
-        git push
