--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,7 +1,7 @@
 name: Generate livestreams
 on:
   schedule:
-    - cron: "45 */2 * * *"
+    - cron: '0 0/2 * * *'
   workflow_dispatch:
 jobs:
   workflow_dispatch:
