--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -9,5 +9,4 @@ jobs:
     steps:
      - name: Install youtube-dl
        run: |
-        sudo curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl
-        sudo chmod a+rx /usr/local/bin/youtube-dl
+        sudo -H pip install --upgrade youtube-dl
