--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 jobs:
   workflow_dispatch:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
      - name: Install youtube-dl
        run: |
