--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,3 +10,14 @@ jobs:
      - name: Install youtube-dl
        run: |
         sudo -H pip install --upgrade youtube-dl
+     - name: RTVE 24h
+       run: |
+        mkdir "ES"
+        cd ES
+        touch ./24h.m3u8
+        sudo cat >./24h.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
+        $(youtube-dl -g https://youtube.com/rtvenoticias/live)
+        EOL
