--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -12,7 +12,7 @@ jobs:
         sudo -H pip install --upgrade youtube-dl
      - name: RTVE 24h
        run: |
-        mkdir "ES"
+        mkdir ES
         cd ES
         touch ./24h.m3u8
         sudo cat >./24h.m3u8 <<EOL
