--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -19,3 +19,11 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
         $(youtube-dl -g https://youtube.com/rtvenoticias/live)
         EOL
+     - name: git add
+       run: |
+        git add -A
+        ls -la
+     - name: commit & push
+       run: |
+        git commit -m "links atualizados"
+        git push
