--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,6 +2,11 @@ name: Generate livestreams
 on:
   schedule:
     - cron: '0 0/2 * * *'
+
+  pull_request:
+    branches:
+      - main
+
   workflow_dispatch:
 jobs:
   workflow_dispatch:
