--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  workflow_dispatch:
+  build:
     runs-on: ubuntu-latest
     steps:
      - name: Install youtube-dl
