--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,12 +13,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     - name: Install youtube-dl
-       run: |
+    - uses: actions/checkout@v2
+    - name: config
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
+    - name: Install youtube-dl
+      run: |
         sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
-     - name: RTVE 24h
-       run: |
+    - name: RTVE 24h
+      run: |
         touch ./24h.m3u8
         sudo cat >./24h.m3u8 <<EOL
         #EXTM3U
@@ -26,11 +31,11 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
         $(youtube-dl -g https://youtube.com/rtvenoticias/live)
         EOL
-     - name: git add
-       run: |
+    - name: git add
+      run: |
         git add -A
         ls -la
-     - name: commit & push
-       run: |
+    - name: commit & push
+      run: |
         git commit -m "links atualizados"
         git push
