--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,6 +24,7 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: RTVE 24h
       run: |
+        pwd
         mkdir "ES"
         touch ./24h.m3u8
         sudo cat >./24h.m3u8 <<EOL
