--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,12 +24,12 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: RTVE 24h
       run: |
-        touch ./24h.m3u8
-        sudo cat >./24h.m3u8 <<EOL
+        touch ./libertaddigital.m3u8
+        sudo cat >./libertaddigital.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://youtube.com/rtvenoticias/live)
+        $(youtube-dl -g https://dai.ly/xnm032)
         EOL
     - name: git add
       run: |
