--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,7 +29,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://dai.ly/xnm032)
+        $(youtube-dl -g https://multicanais.pro/tv-record-ao-vivo/)
         EOL
     - name: git add
       run: |
