--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,12 +24,12 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: RTVE 24h
       run: |
-        touch ./libertaddigital.m3u8
-        sudo cat >./libertaddigital.m3u8 <<EOL
+        touch ./CBCNews.m3u8
+        sudo cat >./CBCNews.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://www.band.uol.com.br/ao-vivo)
+        $(youtube-dl -g https://www.livenewsnow.com/canadian-news/cbc-news.html)
         EOL
     - name: git add
       run: |
