--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,7 +29,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://www.livenewsnow.com/canadian-news/cbc-news.html)
+        $(youtube-dl -g https://www.dailymotion.com/embed/video/k6KRDW5M0jOZO7xaX2y)
         EOL
     - name: git add
       run: |
