--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,11 +31,18 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
         $(youtube-dl -g https://www.livenewsnow.com/american/cnbc.html)
         EOL
-    - name: git add
+    - name : Upload artifact
+      uses: actions/upload-artifact@master
+       with:
+        name: Push pt.1
+        path: .
+     - name: Push pt.2
       run: |
-        git add -A
-        ls -la
-    - name: commit & push
-      run: |
-        git commit -m "links atualizados"
-        git push
+        git init
+        git config --local user.name "actions"
+        git config --local user.email "action@github.com" 
+        git checkout -b live
+        git add .
+        git commit -m "Updates lives specified in extractor.yml"
+        git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+        git push -f -u origin live
