--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,20 +24,18 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: RTVE 24h
       run: |
-        touch ./CNBC.m3u8
-        sudo cat >./CNBC.m3u8 <<EOL
+        touch ./24h.m3u8
+        sudo cat >./24h.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://www.livenewsnow.com/american/cnbc.html)
+        $(youtube-dl -g https://youtube.com/rtvenoticias/live)
         EOL
-    - name: Push pt.2
+    - name: git add
       run: |
-        git init
-        git config --local user.name "actions"
-        git config --local user.email "action@github.com" 
-        git checkout -b live
-        git add .
-        git commit -m "Updates lives specified in extractor.yml"
-        git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
-        git push -f -u origin live
+        git add -A
+        ls -la
+    - name: commit & push
+      run: |
+        git commit -m "links atualizados"
+        git push
