--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,6 +31,15 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
         $(youtube-dl -g https://youtube.com/rtvenoticias/live)
         EOL
+    - name: CBC News
+      run: |
+        touch ./CBCNews.m3u8
+        sudo cat >./CBCNews.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
+        $(youtube-dl -g https://www.livenewsnow.com/canadian-news/cbc-news.html)
+        EOL
     - name: git add
       run: |
         git add -A
