--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -697,18 +697,11 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
         $(youtube-dl -g https://www.youtube.com/watch?v=ZrKYemeOfw8)
         EOL				
-    - name : Upload artifact
-      uses: actions/upload-artifact@master
-      with:
-        name: YTlive m3u8
-        path: .
-    - name: Git push assets to "YTlive" branch
+    - name: git add
       run: |
-        git init
-        git config --local user.name "actions"
-        git config --local user.email "action@github.com"
-        git checkout -b YTlive
-        git add .
-        git commit -m "Update YTlive"
-        git remote add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
-        git push -f -u origin YTlive
+        git add -A
+        ls -la
+    - name: commit & push
+      run: |
+        git commit -m "links atualizados"
+        git push
