--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -47,7 +47,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g  https://www.youtube.com/watch?v=sPgqEHsONK8)
+        $(youtube-dl -g --proxy socks5://153.121.68.69:8444/ https://www.youtube.com/c/RECORDTVJAPAN/live)
         EOL
     - name: git add
       run: |
