--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -49,6 +49,15 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(youtube-dl -g --proxy socks5://72.221.232.155:4145/ https://www.youtube.com/c/RECORDTVJAPAN/live)
         EOL
+    - name: Get ALGUM.m3u8
+      run: |
+        touch ./ALGUM.m3u8
+        sudo cat >./ALGUM.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        $(youtube-dl -g --proxy socks5://72.221.232.155:4145/ https://www.youtube.com/c/RECORDTVJAPAN/)
+        EOL        
     - name: git add
       run: |
         git add -A
