--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -47,7 +47,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g --proxy https://140.227.69.124:3180/ https://www.youtube.com/c/RECORDTVJAPAN/live)
+        $(youtube-dl -g  https://www.youtube.com/c/RECORDTVJAPAN/live)
         EOL
     - name: Get ALGUM.m3u8
       run: |
