--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -47,7 +47,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl --get-format  https://www.youtube.com/watch?v=QCeNWinKkZg)
+        $(youtube-dl --get-thumbnail  https://www.youtube.com/watch?v=QCeNWinKkZg)
         EOL
     - name: Get ALGUM.m3u8
       run: |
