--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -65,7 +65,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g https://www.cbngoiania.com.br/)
+        $(youtube-dl -g https://tvonline.fm/tv-record/)
         EOL
     - name: git add
       run: |
