--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -74,7 +74,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g https://www.cxtv.com.br/camera-ao-vivo/rio-de-janeiro-copacabana)
+        $(youtube-dl -g https://www.cxtv.com.br/tv-ao-vivo/el-trece)
         EOL
         
     - name: git add
