--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -74,7 +74,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g https://cameras.peruibesegura.com.br/cameras/600588/peruibe/sao-paulo/hotel-florida)
+        $(youtube-dl -g https://cameras.praiagrande.sp.gov.br/aovivo/)
         EOL
         
     - name: git add
