--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -83,7 +83,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g  https://diaonline.ig.com.br/cameras-ao-vivo/
+        $(youtube-dl -g  https://diaonline.ig.com.br/camera-ao-vivo/df-003-epia-km-17-brasilia-df/
         https://diaonline.ig.com.br/camera-ao-vivo/praca-civica-goiania-go/
         https://www.climaaovivo.com.br/sp/sao-paulo/sao-paulo-slaviero-essential-ibirapuera
         https://www.climaaovivo.com.br/sp/sao-paulo/alpha-sat-paulista-wall-street-sudoeste
