--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -83,7 +83,9 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g  https://globoplay.globo.com/cbn-sp/ao-vivo/9182156/
+        $(youtube-dl -g  https://www.igrejauniversal.pt/iurdtv/)
+        EOL
+        https://globoplay.globo.com/cbn-sp/ao-vivo/9182156/
         https://www.climaaovivo.com.br/sp/sao-paulo/sao-paulo-slaviero-essential-ibirapuera
         https://www.climaaovivo.com.br/sp/sao-paulo/alpha-sat-paulista-wall-street-sudoeste
         https://www.climaaovivo.com.br/sp/sao-paulo/sao-paulo-slaviero-essential-moema
@@ -92,7 +94,6 @@ jobs:
         https://www.climaaovivo.com.br/rj/rio-de-janeiro/rio-de-janeiro-cdesign-hotel
         https://www.climaaovivo.com.br/go/goiania-comfort-hotel-goiania)
         https://diaonline.ig.com.br/camera-ao-vivo/morro-do-mendanha/)
-        EOL
     - name: git add
       run: |
         git add -A
