--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -83,7 +83,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g  https://www.igrejauniversal.pt/iurdtv/)
+        $(youtube-dl -g https://www.cxtv.com.br/tv-ao-vivo/sic)
         EOL
     - name: git add
       run: |
