--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -83,7 +83,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g  https://diaonline.ig.com.br/camera-ao-vivo/morro-do-mendanha/)
+        $(youtube-dl -g  https://www.tvgazeta.com.br/aovivo/)
         EOL
     - name: git add
       run: |
