--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -83,7 +83,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g  https://cnnportugal.iol.pt/)
+        $(youtube-dl -g  https://tviplayer.iol.pt/direto/CNN)
         EOL
     - name: git add
       run: |
