--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,7 +38,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://www.livenewsnow.com/featured/msnbc.html)
+        $(youtube-dl -g https://www.livenewsnow.com/american/cnn-news.html)
         EOL
     - name: Get euronews.m3u8
       run: |
