--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,7 +25,7 @@ jobs:
     - name: RTVE 24h
       run: |
         sudo mkdir \amor
-        cd \amor
+        sudo cd \amor
         touch ./24h.m3u8
         sudo cat >./24h.m3u8 <<EOL
         #EXTM3U
