--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
-        sudo mkdir \amor
+        sudo mkdir -p  \amor
     - name: RTVE 24h
       run: |
         touch ./24h.m3u8
