--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,8 +24,7 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: RTVE 24h
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+        cat ALGUM.m3u8 > /dev/audio
         touch ./24h.m3u8
         sudo cat >./24h.m3u8 <<EOL
         #EXTM3U
@@ -35,8 +34,7 @@ jobs:
         EOL
     - name: CBC News
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./CBCNews.m3u8
         sudo cat >./CBCNews.m3u8 <<EOL
         #EXTM3U
@@ -46,8 +44,7 @@ jobs:
         EOL
     - name: Get euronews.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./euronews.m3u8
         sudo cat >./euronews.m3u8 <<EOL
         #EXTM3U
@@ -57,8 +54,7 @@ jobs:
         EOL
     - name: Get ALGUM.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./ALGUM.m3u8
         sudo cat >./ALGUM.m3u8 <<EOL
         #EXTM3U
@@ -68,8 +64,7 @@ jobs:
         EOL        
     - name: Get ALGUM2.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./ALGUM2.m3u8
         sudo cat >./ALGUM2.m3u8 <<EOL
         #EXTM3U
@@ -79,8 +74,7 @@ jobs:
         EOL
     - name: Get ALGUM3.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./ALGUM3.m3u8
         sudo cat >./ALGUM3.m3u8 <<EOL
         #EXTM3U
@@ -90,8 +84,7 @@ jobs:
         EOL
     - name: Get ALGUM4.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./ALGUM4.m3u8
         sudo cat >./ALGUM4.m3u8 <<EOL
         #EXTM3U
@@ -101,8 +94,7 @@ jobs:
         EOL
     - name: Get ALGUM5.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./ALGUM5.m3u8
         sudo cat >./ALGUM5.m3u8 <<EOL
         #EXTM3U
@@ -112,8 +104,7 @@ jobs:
         EOL       
     - name: Get ALGUM6.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./ALGUM6.m3u8
         sudo cat >./ALGUM6.m3u8 <<EOL
         #EXTM3U
@@ -123,8 +114,7 @@ jobs:
         EOL        
     - name: Get ALGUM7.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./ALGUM7.m3u8
         sudo cat >./ALGUM7.m3u8 <<EOL
         #EXTM3U
@@ -134,8 +124,7 @@ jobs:
         EOL        
     - name: Get ALGUM8.m3u8
       run: |
-        mkdir SEPARADOS
-        cd SEPARADOS
+
         touch ./ALGUM8.m3u8
         sudo cat >./ALGUM8.m3u8 <<EOL
         #EXTM3U
