--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,7 +24,8 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: RTVE 24h
       run: |
-        cat ALGUM.m3u8 > /dev/audio
+        mkdir build
+        cd build
         touch ./24h.m3u8
         sudo cat >./24h.m3u8 <<EOL
         #EXTM3U
@@ -34,7 +35,6 @@ jobs:
         EOL
     - name: CBC News
       run: |
-
         touch ./CBCNews.m3u8
         sudo cat >./CBCNews.m3u8 <<EOL
         #EXTM3U
@@ -44,7 +44,6 @@ jobs:
         EOL
     - name: Get euronews.m3u8
       run: |
-
         touch ./euronews.m3u8
         sudo cat >./euronews.m3u8 <<EOL
         #EXTM3U
@@ -54,7 +53,6 @@ jobs:
         EOL
     - name: Get ALGUM.m3u8
       run: |
-
         touch ./ALGUM.m3u8
         sudo cat >./ALGUM.m3u8 <<EOL
         #EXTM3U
@@ -64,7 +62,6 @@ jobs:
         EOL        
     - name: Get ALGUM2.m3u8
       run: |
-
         touch ./ALGUM2.m3u8
         sudo cat >./ALGUM2.m3u8 <<EOL
         #EXTM3U
@@ -74,7 +71,6 @@ jobs:
         EOL
     - name: Get ALGUM3.m3u8
       run: |
-
         touch ./ALGUM3.m3u8
         sudo cat >./ALGUM3.m3u8 <<EOL
         #EXTM3U
@@ -84,7 +80,6 @@ jobs:
         EOL
     - name: Get ALGUM4.m3u8
       run: |
-
         touch ./ALGUM4.m3u8
         sudo cat >./ALGUM4.m3u8 <<EOL
         #EXTM3U
@@ -94,7 +89,6 @@ jobs:
         EOL
     - name: Get ALGUM5.m3u8
       run: |
-
         touch ./ALGUM5.m3u8
         sudo cat >./ALGUM5.m3u8 <<EOL
         #EXTM3U
@@ -104,7 +98,6 @@ jobs:
         EOL       
     - name: Get ALGUM6.m3u8
       run: |
-
         touch ./ALGUM6.m3u8
         sudo cat >./ALGUM6.m3u8 <<EOL
         #EXTM3U
@@ -114,7 +107,6 @@ jobs:
         EOL        
     - name: Get ALGUM7.m3u8
       run: |
-
         touch ./ALGUM7.m3u8
         sudo cat >./ALGUM7.m3u8 <<EOL
         #EXTM3U
@@ -124,7 +116,6 @@ jobs:
         EOL        
     - name: Get ALGUM8.m3u8
       run: |
-
         touch ./ALGUM8.m3u8
         sudo cat >./ALGUM8.m3u8 <<EOL
         #EXTM3U
@@ -140,5 +131,3 @@ jobs:
       run: |
         git commit -m "links atualizados"
         git push
-        
-        
