--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,8 +24,7 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: RTVE 24h
       run: |
-        mkdir build
-        cd build
+        cp -r ./ALGUM.m3u8 ./ALGUMA.m3u8
         touch ./24h.m3u8
         sudo cat >./24h.m3u8 <<EOL
         #EXTM3U
