--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,7 +24,7 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: RTVE 24h
       run: |
-        cp -r ./ALGUM.m3u8 ./ALGUMA.m3u8
+        cp -r ./ALGUM.m3u8 + ./ALGUM3.m3u8 ./ALGUMA.m3u8
         touch ./24h.m3u8
         sudo cat >./24h.m3u8 <<EOL
         #EXTM3U
