--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -119,7 +119,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(youtube-dl -g https://www.radio995fm.com.br/ao-vivo/)
+        $(youtube-dl -g https://gauchazh.clicrbs.com.br/?audio_autoplay=true)
         EOL                
     - name: git add
       run: |
