--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,15 @@ jobs:
       run: |
         sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
+    - name: GLOBOPLAY
+      run: |
+        touch ./GLOBOPLAY.m3u8
+        sudo cat >./GLOBOPLAY.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
+        $(youtube-dl -g https://globoplay.globo.com/v/10764248/)
+        EOL
     - name: RTVE 24h
       run: |
         touch ./24h.m3u8
