--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,7 +29,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://globoplay.globo.com/v/10764248/)
+        $(youtube-dl -g https://globoplay.globo.com/v/10787238/editorial/d31f02a6-5363-47ee-9243-c9f7f5e5eac3/)
         EOL
     - name: RTVE 24h
       run: |
