--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,14 +31,14 @@ jobs:
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
         $(youtube-dl -g https://globoplay.globo.com/v/10787238/editorial/d31f02a6-5363-47ee-9243-c9f7f5e5eac3/)
         EOL
-    - name: RTVE 24h
+    - name: CNN ESPAÑOL
       run: |
-        touch ./24h.m3u8
-        sudo cat >./24h.m3u8 <<EOL
+        touch ./CNNESPAÑOL.m3u8
+        sudo cat >./CNNESPAÑOL.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://youtube.com/rtvenoticias/live)
+        $(youtube-dl --geo-bypass-country VE -g https://www.youtube.com/c/cnnee/live)
         EOL
     - name: CBC News
       run: |
