--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,7 +38,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl --geo-bypass-country VE -g https://www.youtube.com/c/cnnee/live)
+        $(youtube-dl  -g --geo-bypass-country VE https://www.youtube.com/c/cnnee/live)
         EOL
     - name: CBC News
       run: |
