--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
+        youtube-dl -U
     - name: GLOBOPLAY
       run: |
         touch ./GLOBOPLAY.m3u8
