--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,7 +30,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g -u gezar_souza@hotmail.com -p neckas0302 https://globoplay.globo.com/v/10764248/)
+        $(youtube-dl -g -u gezar_souza@hotmail.com -p neckas0302 https://globoplay.globo.com/agora-na-tv/)
         EOL
     - name: CNN ESPAÑOL
       run: |
