--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,14 +23,14 @@ jobs:
         sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
         youtube-dl -U
-    - name: GLOBOPLAY
+    - name: PLAYPLUS
       run: |
-        touch ./GLOBOPLAY.m3u8
+        touch ./PLAYPLUS.m3u8
         sudo cat >./GLOBOPLAY.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g -u gezar_souza@hotmail.com -p neckas0302 https://globoplay.globo.com/agora-na-tv/)
+        $(youtube-dl -g  https://www.playplus.com/live/liveEvent/182)
         EOL
     - name: CNN ESPAÑOL
       run: |
