--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,11 +26,11 @@ jobs:
     - name: PLAYPLUS
       run: |
         touch ./PLAYPLUS.m3u8
-        sudo cat >./GLOBOPLAY.m3u8 <<EOL
+        sudo cat >./PLAYPLUS.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g  https://www.playplus.com/live/liveEvent/182)
+        $(youtube-dl -g  https://www.playplus.tv/VOD/7572/db8d274a5163424e967f35a30ddafb8e)
         EOL
     - name: CNN ESPAÑOL
       run: |
