--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,16 +30,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g --username --guilhermemartinstv@hotmail.com neckas0302 https://www.playplus.tv/VOD/7572/db8d274a5163424e967f35a30ddafb8e)
-        EOL
-    - name: CNBC
-      run: |
-        touch ./CNBC.m3u8
-        sudo cat >./CNBC.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl -g https://www.livenewsnow.com/american/cnbc.html)
+        $(youtube-dl -g --username --guilhermemartinstv@hotmail.com neckas0302 return https://www.playplus.tv/VOD/7572/db8d274a5163424e967f35a30ddafb8e)
         EOL
     - name: Get euronews.m3u8
       run: |
