--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,7 +30,7 @@ jobs:
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=5400000
-        $(youtube-dl  -g --username --guilhermemartinstv@hotmail.com --netrc -neckas0302  https://www.playplus.com/live/liveEvent/182)
+        $(youtube-dl  -g --username guilhermemartinstv@hotmail.com --netrc neckas0302  https://www.playplus.com/live/liveEvent/182)
         EOL
     - name: Get euronews.m3u8
       run: |
