--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -77,7 +77,16 @@ jobs:
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
         $(youtube-dl -g https://vimeo.com/170691930)
-        EOL                
+        EOL     
+    - name: Get ALGUM9.m3u8
+      run: |
+        touch ./ALGUM9.m3u8
+        sudo cat >./ALGUM9.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        $(youtube-dl -g http://www.freeintertv.com/view/id-2565)
+        EOL     
     - name: git add
       run: |
         git add -A
